# bassplay-gtk

./: .anjuta_sym_db.db  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  bassplay_gtk
Debug/src/.deps/: bassplay_threads.Po  callbacks.Po  helper_funcs.Po  main.Po  play.Po
autom4te.cache/: output.0  traces.0
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  bassplay_gtk  bassplay_gtk.ui  bassplay_threads.c  bassplay_threads.h  callbacks.c  callbacks.h  globals.h  helper_funcs.c  helper_funcs.c~  helper_funcs.h  history.c  history.h  main.c  module_info.ui  play.c  play.h
src/.deps/: bassplay_threads.Po  callbacks.Po  helper_funcs.Po  main.Po  play.Po
